fix: css 'align-items: start;' warning

--- a/src/app/users/components/user-profile/booking-details-page/booking-details-page.component.css
+++ b/src/app/users/components/user-profile/booking-details-page/booking-details-page.component.css
@@ -29,7 +29,7 @@
 .header {
   display: flex;
   flex-flow: row wrap;
-  align-items: start;
+  align-items: flex-start;
   justify-content: space-between;
   margin-bottom: 1rem;
 }
